# lut_sampler

./: Cargo.toml  LICENSE  README.md
src/: lib.rs  lut_fill.rs  sampler.rs
src/lut_sampler/: mod.rs  mult_verification.rs  offline.rs  online.rs
src/share/: gf2p64.rs  gf_template.rs  mod.rs
src/table_fill/: export.rs  greedy_fill.rs  index_sampling.rs  mod.rs  pmfs.rs
src/util/: mod.rs  mul_triple_vec.rs
