[package]
name = "lut_sampler"
version = "0.1.0"
edition = "2021"
authors = ["Fabian Schmid <fabian.schmid1995@gmail.com"]
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["clmul"]
verbose-timing = []
clmul = []

[dependencies]
rustls = {version = "0.22.1"}
rustls-pemfile = "2.0.0"
serde = {version = "1.0", features = ["derive"]}
toml = "0.8"
oneshot = "0.1.6"
itertools = "0.12.1"
lazy_static = {version = "1.4.0" }
rayon = "1.10.0"
rand = {version = "0.8.5"}
sha2 = "0.10.8"
rand_chacha = "0.3.1"
clap = {version = "4.4.13", features = ["derive"]}
tracing = "0.1.37"
tracing-forest = {version = "0.1.6", features = ["ansi", "smallvec"]}
tracing-subscriber = {version = "0.3.17", features = ["std", "env-filter"]}
fastnum = "0.2.2"
num-integer = "0.1.46"
maestro = { git = "https://github.com/KULeuven-COSIC/maestro.git" }


[[bin]]
name = "sampler"
path = "src/sampler.rs"

[[bin]]
name = "lut_fill"
path = "src/lut_fill.rs"